--- a/面试相关/网络编程/网络基础架构.md
+++ b/面试相关/网络编程/网络基础架构.md
@@ -132,6 +132,9 @@ TCP、RUDP
 1. 为什么网络要多线程
 
    - 如果在游戏主线程中处理网络IO会带来哪些问题？
+
+     答：主线程会经常进入阻塞状态而挂起，因为处理网络IO会用到很多的函数，很多的网络处理函数，比如说像socket里面的recv或者listen或者send会让线程进入阻塞状态，如果主线程用来处理网络IO就会经常阻塞，导致它不能很好的完成逻辑上面的任务。
+
    - 处理socket数据流那种方式合适？
 
 2. 多线程模式会带来哪些问题
@@ -143,7 +146,7 @@ TCP、RUDP
 3. 如何设计一个多线程？
 
    - 避免大量竞态情况发生，把线程共享内存限制到最小
-   - 合理地划分数据对象生命周期管理
+   - 合理地管理数据对象生命周期
    - 抽象出线程之间合适的通信方案
 
 4. 线程间通信方案：命令队列
