--- a/面试相关/高并发/无锁队列.md
+++ b/面试相关/高并发/无锁队列.md
@@ -10,6 +10,8 @@ https://coolshell.cn/articles/8239.html
 
 无锁队列的链表实现
 
+论文：https://www.cs.rochester.edu/u/scott/papers/1996_PODC_queues.pdf
+
 ```c
 EnQueue(Q, data) //进队列改良版 v2 
 {
@@ -38,3 +40,6 @@ EnQueue(Q, data) //进队列改良版 v2
 }
 ```
 
+用数组实现无锁队列
+
+论文：http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.53.8674&rep=rep1&type=pdf
