--- a/C++11/C++11新特性.md
+++ b/C++11/C++11新特性.md
@@ -8,4 +8,38 @@
 
    https://blog.csdn.net/zhouguoqionghai/article/details/45789295
 
-2. 
+2. packaged_task
+
+   也算是一个可调用对象，但是不能被拷贝，只能移动，主要目的是用来获取对应的future对象，来获得函数返回结果
+
+   https://blog.csdn.net/fengbingchun/article/details/104127352
+
+3. splice
+
+   将splice方法就是将list的元素进行拼接
+
+   https://blog.csdn.net/qq_41909314/article/details/90575034
+
+4. std::partition
+
+   https://blog.csdn.net/weixin_40179091/article/details/109211799
+
+5. std::bind
+
+   传入可调用对象以及对应的参数进行延迟调用，function可以绑定全局函数，但是绑定类的成员函数时，要借助std::bind的帮忙
+
+   https://www.cnblogs.com/pandamohist/p/14223254.html
+
+   https://blog.csdn.net/u013654125/article/details/100140328
+
+6. thread_local 
+
+   thread_local描述的对象在thread开始时分配，而在thread结束时分解。
+
+   一般在声明时赋值，在本thread中只执行一次。
+
+   描述的对象依然只在作用域内有效。
+
+   描述类成员变量时，必须是static的。
+
+   https://zhuanlan.zhihu.com/p/340201634
