--- a/C++11/C++11新特性.md
+++ b/C++11/C++11新特性.md
@@ -43,3 +43,52 @@
    描述类成员变量时，必须是static的。
 
    https://zhuanlan.zhihu.com/p/340201634
+   
+7. decltype
+
+   decltype并不会实际计算表达式的值，编译器分析表达式并得到它的类型
+
+   https://blog.csdn.net/u014609638/article/details/106987131/
+
+8. template<typename F, typename... Args> 可变模版参数
+
+   https://www.cnblogs.com/qicosmos/p/4325949.html
+
+9. auto submit(...) -> dectype(){} 尾返回类型推导
+
+   ```C++
+   template<typename T, typename U>
+   auto add2(T x, U y) -> decltype(x+y){
+   return x + y;
+   }
+   ```
+
+10. std::forward()
+
+    完美转发`std::forward()`将会完整保留参数的引用类型进行转发。如果参数是左值引用（*lvalue*），该方法会将参数保留左值引用的形式进行转发，如果参数是右值引用（*rvalue*），该方法会将参数保留右值引用的形式进行转发。
+
+11. 万能引用
+
+    好帖：https://zhuanlan.zhihu.com/p/99524127
+
+    如果一个变量或者参数被声明为T&&，其中T是被推导的类型，那这个变量或者参数就是一个universal reference。
+
+    和所有的引用一样，你必须对universal references进行初始化，而且正是universal reference的initializer决定了它到底代表的是lvalue reference 还是 rvalue reference
+
+    对于 template <typenam e T> foo(T&&)这样的代码。
+
+    - 如果传递过去的参数是左值，T 的推导结果是左值引用，那 T&& 的结果仍然是左值引用——即 T& && 坍缩成了T&
+    - 如果传递过去的参数是右值，T 的推导结果是参数的类型本身。那 T&& 的结果自然就是一个右值引用。
+
+12. 表达式的左右值性与类型无关
+
+    表达式的类型不会告诉你它到底是个lvalue还是rvalue。因为表达式的 lvalueness 或 rvalueness 独立于它的类型，我们就可以有一个 lvalue，但它的类型是 rvalue reference，也可以有一个 rvalue reference 类型的 rvalue
+
+    int && i: i是一个变量，其类型是int类型的右值引用，int是类型，右值引用是类别
+
+13. move
+
+    就是将一个左值转换成右值，而不用关心它本身是什么类型的
+
+14. boost库中的io_service以及work类
+
