--- a/学习心得/设计模式/设计模式.md
+++ b/学习心得/设计模式/设计模式.md
@@ -78,3 +78,67 @@
 
 ![image-20211215223013627](C:\Users\MARIO\AppData\Roaming\Typora\typora-user-images\image-20211215223013627.png)
 
+## 第6集 装饰模式
+
+### 4. Decorator 装饰模式
+
+具有扩展作用
+
+特点：Decorator类，继承某一基类，然后类中又组合包含了基类成员
+
+---
+
+![image-20211216165430541](C:\Users\MARIO\AppData\Roaming\Typora\typora-user-images\image-20211216165430541.png)
+
+---
+
+编译时装配和运行时装配
+
+---
+
+加入装饰器前的类结构![image-20211216172048918](C:\Users\MARIO\AppData\Roaming\Typora\typora-user-images\image-20211216172048918.png)
+
+---
+
+加入装饰器后的结构![image-20211216171908015](C:\Users\MARIO\AppData\Roaming\Typora\typora-user-images\image-20211216171908015.png)
+
+---
+
+![image-20211216172914711](C:\Users\MARIO\AppData\Roaming\Typora\typora-user-images\image-20211216172914711.png)
+
+---
+
+![image-20211216172948543](C:\Users\MARIO\AppData\Roaming\Typora\typora-user-images\image-20211216172948543.png)
+
+---
+
+![image-20211216173231906](C:\Users\MARIO\AppData\Roaming\Typora\typora-user-images\image-20211216173231906.png)
+
+---
+
+![image-20211216173250417](C:\Users\MARIO\AppData\Roaming\Typora\typora-user-images\image-20211216173250417.png)
+
+---
+
+
+
+## 第7集 桥模式
+
+### 5. Bridge 桥模式
+
+和装饰模式非常相似，但是桥模式并没有一个公共的祖先类，而是在抽象类中组合包含一个指向实现基类的指针
+
+![image-20211216191509759](C:\Users\MARIO\AppData\Roaming\Typora\typora-user-images\image-20211216191509759.png)
+
+---
+
+![](C:\Users\MARIO\AppData\Roaming\Typora\typora-user-images\image-20211216203800645.png)
+
+---
+
+![image-20211216191835480](C:\Users\MARIO\AppData\Roaming\Typora\typora-user-images\image-20211216191835480.png)
+
+---
+
+
+
