--- a/学习心得/设计模式/设计模式.md
+++ b/学习心得/设计模式/设计模式.md
@@ -142,3 +142,59 @@
 
 
 
+## 第8集 工厂方法
+
+### 6. Factory Method 工厂方法
+
+---
+
+![image-20211217205616430](C:\Users\MARIO\AppData\Roaming\Typora\typora-user-images\image-20211217205616430.png)
+
+---
+
+![image-20211217212051787](C:\Users\MARIO\AppData\Roaming\Typora\typora-user-images\image-20211217212051787.png)
+
+---
+
+![image-20211217212522293](C:\Users\MARIO\AppData\Roaming\Typora\typora-user-images\image-20211217212522293.png)
+
+---
+
+![image-20211217212542705](C:\Users\MARIO\AppData\Roaming\Typora\typora-user-images\image-20211217212542705.png)
+
+---
+
+
+
+## 第9集 抽象工厂
+
+### 7. Abstract Factory 抽象工厂
+
+其实就是叫做Family Factory，让相互关联的工厂生产方法放在同一个工厂中
+
+---
+
+![image-20211217213550447](C:\Users\MARIO\AppData\Roaming\Typora\typora-user-images\image-20211217213550447.png)
+
+---
+
+![image-20211217214900655](C:\Users\MARIO\AppData\Roaming\Typora\typora-user-images\image-20211217214900655.png)
+
+---
+
+![image-20211217215544742](C:\Users\MARIO\AppData\Roaming\Typora\typora-user-images\image-20211217215544742.png)
+
+---
+
+红色是稳定部分，不需要在改动
+
+蓝色是一种变化方向，绿色是另一种变化方向
+
+---
+
+![image-20211217215652931](C:\Users\MARIO\AppData\Roaming\Typora\typora-user-images\image-20211217215652931.png)
+
+---
+
+  
+
