--- a/学习心得/设计模式/设计模式.md
+++ b/学习心得/设计模式/设计模式.md
@@ -196,5 +196,65 @@
 
 ---
 
-  
+##   第10集 原型模式
+
+### 8. Prototype 原型模式
+
+通过克隆自己来创建对象
+
+---
+
+![image-20211219222324676](pics/image-20211219222324676.png)
+
+---
+
+![image-20211219222401684](pics/image-20211219222401684.png)
+
+----
+
+它和工厂方法的区别在于：如果当前对象状态很复杂，比如带有各种属性，若用工厂创建对象的话，这个创建方法会很麻烦，而如果当前直接有一个可用的对象，则以它作为原型，将其状态复制到新的对象再去操作，会更方便。
+
+创建对象简单的情况可以用工厂，复杂用原型，两种都是来解决new的问题
+
+---
+
+![image-20211219224219428](pics/image-20211219224219428.png)
+
+---
+
+![image-20211219223233604](pics/image-20211219223233604.png)
+
+---
+
+
+
+
+
+## 第11集 构建器
+
+### 9. Builder 构建器
+
+没太看懂。。。
+
+---
+
+![image-20211219224702486](pics/image-20211219224702486.png)
+
+---
+
+C++中，构造函数中使用当前类的虚函数只能实现静态绑定，不能实现动态绑定，若该虚函数是纯虚函数即并没有真正实现则会报错。
+
+---
+
+![image-20211219230511125](pics/image-20211219230511125.png)
+
+---
+
+![image-20211219230607108](pics/image-20211219230607108.png)
+
+---
+
+![image-20211219230702614](pics/image-20211219230702614.png)
+
+---
 
