--- a/设计模式/设计模式.md
+++ b/设计模式/设计模式.md
@@ -1,54 +1,128 @@
-# 设计模式
+#  设计模式
 
 ## 第1集 设计模式简介
 
-![image-20211214172752424](pics/image-20211214172752424.png)---
+![image-20211214172752424](pics/image-20211214172752424.png)
 
-![image-20211214172917258](pics/image-20211214172917258.png)---
+---
+
+![image-20211214172917258](pics/image-20211214172917258.png)
+
+---
+
+
 
 ## 第2集 面向对象设计原则
 
- ![image-20211214173318057](pics/image-20211214173318057.png)---
+ ![image-20211214173318057](pics/image-20211214173318057.png)
 
-![image-20211214173719241](pics/image-20211214173719241.png)---
+---
 
-![image-20211214174153501](pics/image-20211214174153501.png)---
 
-![image-20211214174908146](pics/image-20211214174908146.png)---
 
-![image-20211214175329366](pics/image-20211214175329366.png)---
+![image-20211214173719241](pics/image-20211214173719241.png)
 
-![image-20211214175430845](pics/image-20211214175430845.png)---
+---
 
-![image-20211214175701734](pics/image-20211214175701734.png)---
 
-![image-20211214175909034](pics/image-20211214175909034.png)---
 
-![image-20211214180115897](pics/image-20211214180115897.png)--- 
+![image-20211214174153501](pics/image-20211214174153501.png)
 
-![image-20211214180210650](pics/image-20211214180210650.png)---
+---
 
-![image-20211214180328376](pics/image-20211214180328376.png)---  
 
-![image-20211214181103676](pics/image-20211214181103676.png)---
+
+![image-20211214174908146](pics/image-20211214174908146.png)
+
+---
+
+
+
+![image-20211214175329366](pics/image-20211214175329366.png)
+
+---
+
+
+
+![image-20211214175430845](pics/image-20211214175430845.png)
+
+---
+
+
+
+![image-20211214175701734](pics/image-20211214175701734.png)
+
+---
+
+
+
+![image-20211214175909034](pics/image-20211214175909034.png)
+
+---
+
+
+
+![image-20211214180115897](pics/image-20211214180115897.png)
+
+---
+
+
+
+![image-20211214180210650](pics/image-20211214180210650.png)
+
+---
+
+
+
+![image-20211214180328376](pics/image-20211214180328376.png)
+
+---
+
+
+
+![image-20211214181103676](pics/image-20211214181103676.png)
+
+---
+
+
 
 ## 第3集 模板方法
 
 ### 1. Template Method 设计模式 
 
-![image-20211214212727058](pics/image-20211214212727058.png)---
+![image-20211214212727058](pics/image-20211214212727058.png)
 
-![image-20211214212750694](pics/image-20211214212750694.png)---
+---
 
-![image-20211214211052073](pics/image-20211214211052073.png)---
 
-![image-20211214211153897](pics/image-20211214211153897.png)--- 
+
+![image-20211214212750694](pics/image-20211214212750694.png)
+
+---
+
+
+
+![image-20211214211052073](pics/image-20211214211052073.png)
+
+---
+
+
+
+![image-20211214211153897](pics/image-20211214211153897.png)
+
+---
+
+
 
 ![image-20211214212028699](pics/image-20211214212028699.png)
 
 **以后每学一个设计模式就要这样通过红色框来表示稳定部分，蓝色框表示变化部分**
 
-![image-20211214212447053](pics/image-20211214212447053.png)---
+![image-20211214212447053](pics/image-20211214212447053.png)
+
+---
+
+
 
 ## 第4集 策略模式
 
@@ -58,9 +132,15 @@
 
  [19:00] 复用性：编译，部署之后二进制意义的复用,而不是某些不变的代码片段
 
-![image-20211214214207755](pics/image-20211214214207755.png)---
+![image-20211214214207755](pics/image-20211214214207755.png)
 
-![image-20211214214414750](pics/image-20211214214414750.png)---
+---
+
+![image-20211214214414750](pics/image-20211214214414750.png)
+
+---
+
+
 
 ## 第5集 观察者模式
 
@@ -68,13 +148,29 @@
 
 也叫Event
 
-![image-20211215215140561](pics/image-20211215215140561.png)---
+![image-20211215215140561](pics/image-20211215215140561.png)
 
-![image-20211215221848157](pics/image-20211215221848157.png)---
+---
 
-![image-20211215222338823](pics/image-20211215222338823.png)---
 
-![image-20211215222617131](pics/image-20211215222617131.png)---
+
+![image-20211215221848157](pics/image-20211215221848157.png)
+
+---
+
+
+
+![image-20211215222338823](pics/image-20211215222338823.png)
+
+---
+
+
+
+![image-20211215222617131](pics/image-20211215222617131.png)
+
+---
+
+
 
 ![image-20211215223013627](pics/image-20211215223013627.png)
 
@@ -560,4 +656,90 @@ Proxy是解决两个对象，因为安全或者其他的原因，需要被隔离
 Adapter是实现旧接口（不符合当前使用规范）对于新接口（当前使用规范）的适配
 
 Mediator是解决系统内部不同对象之间的紧密的以来耦合关系的模式
+
+
+
+## 第18集 状态模式
+
+### 17. State 状态模式
+
+---
+
+![image-20220111072158934](pics/image-20220111072158934.png)
+
+---
+
+![image-20220111072232875](pics/image-20220111072232875.png)
+
+---
+
+![image-20220111073730387](pics/image-20220111073730387.png)
+
+---
+
+![image-20220111073905272](pics/image-20220111073905272.png)
+
+---
+
+![image-20220111074249589](pics/image-20220111074249589.png)
+
+---
+
+
+
+## 第19集 备忘录模式
+
+### 18. Memento 备忘录模式
+
+---
+
+![image-20220111074750244](pics/image-20220111074750244.png)
+
+---
+
+![image-20220111074823570](pics/image-20220111074823570.png)
+
+---
+
+![image-20220111074852869](pics/image-20220111074852869.png)
+
+---
+
+ ![image-20220111075741349](pics/image-20220111075741349.png)
+
+---
+
+![image-20220111080034153](pics/image-20220111080034153.png)
+
+---
+
+
+
+## 第20集 数据结构模式
+
+### 19. Composite 数据结构模式
+
+---
+
+![image-20220111083715081](pics/image-20220111083715081.png)
+
+---
+
+![image-20220111083755895](pics/image-20220111083755895.png)
+
+---
+
+![image-20220111083813239](pics/image-20220111083813239.png)
+
+---
+
+![image-20220111084717055](pics/image-20220111084717055.png)
+
+---
+
+![image-20220111084813605](pics/image-20220111084813605.png)
+
+---
+
+ 
 
